Fix NULL pointer crash in ScanParams::slotNewResolution()

Happens when looking up the current scan resolution if the
SANE_NAME_SCAN_RESOLUTION and SANE_NAME_SCAN_X_RESOLUTION option
names are not the same and the scanner only has the former.  They were
equivalent in SANE 1.0.19, but in 1.0.20 they are different.

BUG:264768